Fixed XML and added driveNodes files

--- a/jetson/nav2/meson.build
+++ b/jetson/nav2/meson.build
@@ -3,7 +3,7 @@ project('nav2', 'cpp', default_options : ['cpp_std=c++14'])
 liblcm = dependency('lcm')
 
 incdir = include_directories('include')
-nodes = include_directories('nodes')
+nodes = include_directories('nodes') 
 follower = include_directories('followers')
 #planner = include_directories('planners')
 searchPattern = include_directories('searchPatterns')
@@ -11,6 +11,7 @@ searchPattern = include_directories('searchPatterns')
 executable('jetson_nav2', 'main.cpp', 'treeGenerator.cpp',
             'nodes/searchNodes.cpp',
             'nodes/utilityNodes.cpp',
+            'nodes/driveNodes.cpp',
             'nodes/vendingMachineNodes.cpp',
             'searchPatterns/lawnmower.cpp',
             'searchPatterns/spiralIn.cpp',
